Compiler/exam/q3/y.output
State 42 conflicts: 4 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: SELECT Identifiers FROM IDENTIFIER Where

    2 Identifiers: IDENTIFIER COMMA Identifiers
    3            | IDENTIFIER
    4            | MUL

    5 Where: WHERE Comparisons
    6      | ε

    7 Comparisons: Comparison Log_Op Comparisons
    8            | Comparison

    9 Comparison: IDENTIFIER Compare INV_COMMA Expression INV_COMMA

   10 Log_Op: OR
   11       | AND

   12 Compare: EQUAL
   13        | GT Equal
   14        | LT Equal

   15 Equal: EQUAL
   16      | ε

   17 Expression: Expression Arith_Op Expression
   18           | LP Expression RP
   19           | Token

   20 Arith_Op: ADD
   21         | SUB
   22         | MUL
   23         | DIV

   24 Token: IDENTIFIER
   25      | FLOAT
   26      | INTEGER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SELECT (258) 1
    IDENTIFIER (259) 1 2 3 9 24
    FROM (260) 1
    WHERE (261) 5
    INTEGER (262) 26
    FLOAT (263) 25
    ADD (264) 20
    SUB (265) 21
    MUL (266) 4 22
    DIV (267) 23
    EQUAL (268) 12 15
    GT (269) 13
    LT (270) 14
    COMMA (271) 2
    INV_COMMA (272) 9
    OR (273) 10
    AND (274) 11
    LP (275) 18
    RP (276) 18


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    Start (23)
        on left: 1
        on right: 0
    Identifiers (24)
        on left: 2 3 4
        on right: 1 2
    Where (25)
        on left: 5 6
        on right: 1
    Comparisons (26)
        on left: 7 8
        on right: 5 7
    Comparison (27)
        on left: 9
        on right: 7 8
    Log_Op (28)
        on left: 10 11
        on right: 7
    Compare (29)
        on left: 12 13 14
        on right: 9
    Equal (30)
        on left: 15 16
        on right: 13 14
    Expression (31)
        on left: 17 18 19
        on right: 9 17 18
    Arith_Op (32)
        on left: 20 21 22 23
        on right: 17
    Token (33)
        on left: 24 25 26
        on right: 19


State 0

    0 $accept: • Start $end

    SELECT  shift, and go to state 1

    Start  go to state 2


State 1

    1 Start: SELECT • Identifiers FROM IDENTIFIER Where

    IDENTIFIER  shift, and go to state 3
    MUL         shift, and go to state 4

    Identifiers  go to state 5


State 2

    0 $accept: Start • $end

    $end  shift, and go to state 6


State 3

    2 Identifiers: IDENTIFIER • COMMA Identifiers
    3            | IDENTIFIER •

    COMMA  shift, and go to state 7

    $default  reduce using rule 3 (Identifiers)


State 4

    4 Identifiers: MUL •

    $default  reduce using rule 4 (Identifiers)


State 5

    1 Start: SELECT Identifiers • FROM IDENTIFIER Where

    FROM  shift, and go to state 8


State 6

    0 $accept: Start $end •

    $default  accept


State 7

    2 Identifiers: IDENTIFIER COMMA • Identifiers

    IDENTIFIER  shift, and go to state 3
    MUL         shift, and go to state 4

    Identifiers  go to state 9


State 8

    1 Start: SELECT Identifiers FROM • IDENTIFIER Where

    IDENTIFIER  shift, and go to state 10


State 9

    2 Identifiers: IDENTIFIER COMMA Identifiers •

    $default  reduce using rule 2 (Identifiers)


State 10

    1 Start: SELECT Identifiers FROM IDENTIFIER • Where

    WHERE  shift, and go to state 11

    $default  reduce using rule 6 (Where)

    Where  go to state 12


State 11

    5 Where: WHERE • Comparisons

    IDENTIFIER  shift, and go to state 13

    Comparisons  go to state 14
    Comparison   go to state 15


State 12

    1 Start: SELECT Identifiers FROM IDENTIFIER Where •

    $default  reduce using rule 1 (Start)


State 13

    9 Comparison: IDENTIFIER • Compare INV_COMMA Expression INV_COMMA

    EQUAL  shift, and go to state 16
    GT     shift, and go to state 17
    LT     shift, and go to state 18

    Compare  go to state 19


State 14

    5 Where: WHERE Comparisons •

    $default  reduce using rule 5 (Where)


State 15

    7 Comparisons: Comparison • Log_Op Comparisons
    8            | Comparison •

    OR   shift, and go to state 20
    AND  shift, and go to state 21

    $default  reduce using rule 8 (Comparisons)

    Log_Op  go to state 22


State 16

   12 Compare: EQUAL •

    $default  reduce using rule 12 (Compare)


State 17

   13 Compare: GT • Equal

    EQUAL  shift, and go to state 23

    $default  reduce using rule 16 (Equal)

    Equal  go to state 24


State 18

   14 Compare: LT • Equal

    EQUAL  shift, and go to state 23

    $default  reduce using rule 16 (Equal)

    Equal  go to state 25


State 19

    9 Comparison: IDENTIFIER Compare • INV_COMMA Expression INV_COMMA

    INV_COMMA  shift, and go to state 26


State 20

   10 Log_Op: OR •

    $default  reduce using rule 10 (Log_Op)


State 21

   11 Log_Op: AND •

    $default  reduce using rule 11 (Log_Op)


State 22

    7 Comparisons: Comparison Log_Op • Comparisons

    IDENTIFIER  shift, and go to state 13

    Comparisons  go to state 27
    Comparison   go to state 15


State 23

   15 Equal: EQUAL •

    $default  reduce using rule 15 (Equal)


State 24

   13 Compare: GT Equal •

    $default  reduce using rule 13 (Compare)


State 25

   14 Compare: LT Equal •

    $default  reduce using rule 14 (Compare)


State 26

    9 Comparison: IDENTIFIER Compare INV_COMMA • Expression INV_COMMA

    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    FLOAT       shift, and go to state 30
    LP          shift, and go to state 31

    Expression  go to state 32
    Token       go to state 33


State 27

    7 Comparisons: Comparison Log_Op Comparisons •

    $default  reduce using rule 7 (Comparisons)


State 28

   24 Token: IDENTIFIER •

    $default  reduce using rule 24 (Token)


State 29

   26 Token: INTEGER •

    $default  reduce using rule 26 (Token)


State 30

   25 Token: FLOAT •

    $default  reduce using rule 25 (Token)


State 31

   18 Expression: LP • Expression RP

    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    FLOAT       shift, and go to state 30
    LP          shift, and go to state 31

    Expression  go to state 34
    Token       go to state 33


State 32

    9 Comparison: IDENTIFIER Compare INV_COMMA Expression • INV_COMMA
   17 Expression: Expression • Arith_Op Expression

    ADD        shift, and go to state 35
    SUB        shift, and go to state 36
    MUL        shift, and go to state 37
    DIV        shift, and go to state 38
    INV_COMMA  shift, and go to state 39

    Arith_Op  go to state 40


State 33

   19 Expression: Token •

    $default  reduce using rule 19 (Expression)


State 34

   17 Expression: Expression • Arith_Op Expression
   18           | LP Expression • RP

    ADD  shift, and go to state 35
    SUB  shift, and go to state 36
    MUL  shift, and go to state 37
    DIV  shift, and go to state 38
    RP   shift, and go to state 41

    Arith_Op  go to state 40


State 35

   20 Arith_Op: ADD •

    $default  reduce using rule 20 (Arith_Op)


State 36

   21 Arith_Op: SUB •

    $default  reduce using rule 21 (Arith_Op)


State 37

   22 Arith_Op: MUL •

    $default  reduce using rule 22 (Arith_Op)


State 38

   23 Arith_Op: DIV •

    $default  reduce using rule 23 (Arith_Op)


State 39

    9 Comparison: IDENTIFIER Compare INV_COMMA Expression INV_COMMA •

    $default  reduce using rule 9 (Comparison)


State 40

   17 Expression: Expression Arith_Op • Expression

    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    FLOAT       shift, and go to state 30
    LP          shift, and go to state 31

    Expression  go to state 42
    Token       go to state 33


State 41

   18 Expression: LP Expression RP •

    $default  reduce using rule 18 (Expression)


State 42

   17 Expression: Expression • Arith_Op Expression
   17           | Expression Arith_Op Expression •

    ADD  shift, and go to state 35
    SUB  shift, and go to state 36
    MUL  shift, and go to state 37
    DIV  shift, and go to state 38

    ADD       [reduce using rule 17 (Expression)]
    SUB       [reduce using rule 17 (Expression)]
    MUL       [reduce using rule 17 (Expression)]
    DIV       [reduce using rule 17 (Expression)]
    $default  reduce using rule 17 (Expression)

    Arith_Op  go to state 40

    shift/reduce conflict on token ADD:
       17 Expression: Expression Arith_Op Expression •
       20 Arith_Op: • ADD
      Example: Expression Arith_Op Expression • ADD Expression
      Shift derivation
        Expression
        ↳ 17: Expression Arith_Op Expression
                                  ↳ 17: Expression Arith_Op    Expression
                                                   ↳ 20: • ADD
      Reduce derivation
        Expression
        ↳ 17: Expression                             Arith_Op  Expression
              ↳ 17: Expression Arith_Op Expression • ↳ 20: ADD

    shift/reduce conflict on token SUB:
       17 Expression: Expression Arith_Op Expression •
       21 Arith_Op: • SUB
      Example: Expression Arith_Op Expression • SUB Expression
      Shift derivation
        Expression
        ↳ 17: Expression Arith_Op Expression
                                  ↳ 17: Expression Arith_Op    Expression
                                                   ↳ 21: • SUB
      Reduce derivation
        Expression
        ↳ 17: Expression                             Arith_Op  Expression
              ↳ 17: Expression Arith_Op Expression • ↳ 21: SUB

    shift/reduce conflict on token MUL:
       17 Expression: Expression Arith_Op Expression •
       22 Arith_Op: • MUL
      Example: Expression Arith_Op Expression • MUL Expression
      Shift derivation
        Expression
        ↳ 17: Expression Arith_Op Expression
                                  ↳ 17: Expression Arith_Op    Expression
                                                   ↳ 22: • MUL
      Reduce derivation
        Expression
        ↳ 17: Expression                             Arith_Op  Expression
              ↳ 17: Expression Arith_Op Expression • ↳ 22: MUL

    shift/reduce conflict on token DIV:
       17 Expression: Expression Arith_Op Expression •
       23 Arith_Op: • DIV
      Example: Expression Arith_Op Expression • DIV Expression
      Shift derivation
        Expression
        ↳ 17: Expression Arith_Op Expression
                                  ↳ 17: Expression Arith_Op    Expression
                                                   ↳ 23: • DIV
      Reduce derivation
        Expression
        ↳ 17: Expression                             Arith_Op  Expression
              ↳ 17: Expression Arith_Op Expression • ↳ 23: DIV

